tmp: 临时提交同步代码;